fix(build): sync pnpm-lock.yaml and remove package-lock.json

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,2 @@
 PUBLIC_API_URL=http://localhost:8080/api/v1
+PUBLIC_SENTRY_DSN=https://0e3839d2ee95505421051e666db2e27e@o4510692573773824.ingest.de.sentry.io/4510692585504848
