--- a/package.json
+++ b/package.json
@@ -33,6 +33,11 @@
 		"vite": "^7.2.6"
 	},
 	"dependencies": {
-		"@sentry/sveltekit": "^10.32.1"
+		"@sentry/sveltekit": "^10.32.1",
+		"bits-ui": "1.0.0-next.98",
+		"clsx": "^2.1.1",
+		"lucide-svelte": "^0.562.0",
+		"tailwind-merge": "^3.4.0",
+		"tailwind-variants": "^3.2.2"
 	}
 }
