--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
 	"dependencies": {
 		"@sentry/sveltekit": "^10.32.1",
 		"bits-ui": "1.0.0-next.98",
+		"chart.js": "^4.4.7",
 		"clsx": "^2.1.1",
 		"lucide-svelte": "^0.562.0",
+		"svelte-i18n": "^4.0.1",
 		"tailwind-merge": "^3.4.0",
 		"tailwind-variants": "^3.2.2",
 		"vaul-svelte": "^0.3.2"
