--- a/package.json
+++ b/package.json
@@ -31,11 +31,11 @@
 		"tailwindcss": "^4.1.17",
 		"typescript": "^5.9.3",
 		"typescript-eslint": "^8.48.1",
-		"vite": "^7.2.6",
-		"vite-plugin-pwa": "^0.21.1"
+		"vite": "^7.2.6"
 	},
 	"dependencies": {
 		"@sentry/sveltekit": "^10.32.1",
+		"@vite-pwa/sveltekit": "^1.1.0",
 		"bits-ui": "1.0.0-next.98",
 		"chart.js": "^4.4.7",
 		"clsx": "^2.1.1",
@@ -43,6 +43,7 @@
 		"svelte-i18n": "^4.0.1",
 		"tailwind-merge": "^3.4.0",
 		"tailwind-variants": "^3.2.2",
-		"vaul-svelte": "^0.3.2"
+		"vaul-svelte": "^0.3.2",
+		"workbox-window": "^7.4.0"
 	}
 }
