fix(ci): use Bun for runtime and production deps install
- bun install --production for faster dep install
- Bun runtime for adapter-node output
- WorkingDirectory at /var/www/monger-frontend for node_modules access

--- a/deploy/monger-frontend.service
+++ b/deploy/monger-frontend.service
@@ -1,12 +1,12 @@
 [Unit]
-Description=Monger Frontend (SvelteKit + Node)
+Description=Monger Frontend (SvelteKit)
 After=network.target
 
 [Service]
 Type=simple
 User=root
-WorkingDirectory=/var/www/monger-frontend/build
-ExecStart=/usr/bin/node ./index.js
+WorkingDirectory=/var/www/monger-frontend
+ExecStart=/root/.bun/bin/bun run build/index.js
 Restart=on-failure
 RestartSec=5
 Environment=PORT=3000
