--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,7 +40,7 @@ jobs:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
-          source: "build/*,deploy/monger-frontend.service"
+          source: "build/*,package.json,pnpm-lock.yaml,deploy/monger-frontend.service"
           target: "/var/www/monger-frontend"
           overwrite: true
 
@@ -51,12 +51,19 @@ jobs:
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
           script: |
+            cd /var/www/monger-frontend
+            
+            # Move files to correct location
             mv /var/www/monger-frontend/deploy/monger-frontend.service /var/www/monger-frontend/ 2>/dev/null || true
             rm -rf /var/www/monger-frontend/deploy
             
+            # Create .env
             cat > /var/www/monger-frontend/.env << 'EOF'
             ${{ secrets.FRONTEND_ENV }}
             EOF
+            
+            # Install production dependencies with Bun
+            ~/.bun/bin/bun install --production
             
             sudo cp /var/www/monger-frontend/monger-frontend.service /etc/systemd/system/
             sudo systemctl daemon-reload
