--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"bits-ui": "1.0.0-next.98",
 		"chart.js": "^4.4.7",
 		"clsx": "^2.1.1",
+		"dexie": "^4.3.0",
 		"driver.js": "^1.4.0",
 		"lucide-svelte": "^0.562.0",
 		"svelte-i18n": "^4.0.1",
