--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,7 +41,7 @@ jobs:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USER }}
           key: ${{ secrets.VPS_SSH_KEY }}
-          source: "build/*,package.json,pnpm-lock.yaml,deploy/monger-frontend.service"
+          source: "build,package.json,pnpm-lock.yaml,deploy/monger-frontend.service"
           target: "/var/www/monger-frontend"
           overwrite: true
 
